<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@null"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingTop="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/title_sync"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000" />

    <LinearLayout
        android:id="@+id/ll_enable_sync"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:clickable="true"
        android:gravity="center_vertical"
        android:minHeight="52dp"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_sync_dbx"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summary_sync_dbx"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_enable_sync"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:clickable="false" />
    </LinearLayout>
</LinearLayout>